--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,11 +5,33 @@ $secondcolor: #191654;
 $primarytextcolor: black;
 $secondtextcolor: white;
 
-
 body {
   caret-color: transparent;
   background-color: $primarycolor;
 }
+img {
+  width: 100px;
+}
+main {
+  display: flex;
+  flex-direction: column;
+  .search-post-bar {
+    margin-top: 5rem;
+    form {
+      width: 400px;
+    }
+  }
+  .postContainer {
+    .all-posts_card-container {
+      width: 500px;
+      margin: auto;
+      a {
+        text-decoration: none;
+      }
+    }
+  }
+}
+
 #userAvatar {
   width: 200px;
   height: 200px;
@@ -23,5 +45,7 @@ body {
 }
 .homePageContainer {
   margin-top: 10rem;
-
+}
+.registerContainer form {
+  margin-top: 10rem;
 }
