--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,5 @@
 @import "../../node_modules/bootstrap-dark-5/dist/css/bootstrap-dark.min.css";
+@import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
 
 $primarycolor: white;
 $secondcolor: #191654;
