--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,4 @@
-@import "../../node_modules/bootstrap-dark-5/dist/css/bootstrap-dark.min.css";
-@import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
 $primarycolor: white;
 $secondcolor: #191654;
